src/g4ltl/utility/simpleformulaparser/BooleanFormulaParser.java
package g4ltl.utility.simpleformulaparser;

/* Generated By:JavaCC: Do not edit this line. BooleanFormulaParser.java */
// To compile, use javacc -STATIC:false -LOOKAHEAD:4 option

/*
Notice: This parser may fail to parse many specifications.
Currently there is a strict ordering on the operators.

->, &&, ||, !

Essentially the parser is expected to parse CNF

1. "!" should be close to variables, i.e., to form literals.
2. "||" is used to connect literals to form clauses. E.g., it is allowed to have (!a || b || c), but "||" can't connect two subformulas.
3. "&&" is used to connect clauses, where each clause can be with "()" or a single literal.
4. We can additionally use "->" outside, to form assume-guarantee style properties.

*/

import java.lang.StringBuffer;
import java.io.StringReader;
import java.util.ArrayList;
import java.util.HashMap;
import java.io.Reader;
import jdd.bdd.BDD;

public class BooleanFormulaParser implements BooleanFormulaParserConstants {

    static boolean debug;
    static BDD bdd;
    static int[] variableArray;
    static ArrayList<String> variableIndex;

    public BooleanFormulaParser(String s, BDD bdd, int[] variableArray, ArrayList<String> variableIndex, boolean debug) {
            this((Reader) (new StringReader(s)));
            this.bdd = bdd;
            this.variableArray = variableArray;
            this.variableIndex = variableIndex;
            this.debug = debug;

    }


 static int createAtomic(String predicate) {

    int resultAtomic = bdd.ref(variableArray[variableIndex.indexOf(predicate)]);
    return resultAtomic;

}

/** 
 *  Top level
 */
  final public int parse() throws ParseException {
int exp;
    exp = expression();

    jj_consume_token(0);

     if(debug){System.out.println();} {if (true) return exp;}
    throw new Error("Missing return statement in function");
  }

/**
 *
 */
  final public int expression() throws ParseException {
int a;
    a = StateTerm();
                               {if (true) return a;}
    throw new Error("Missing return statement in function");
  }

/**
 *
 */
  final public int StateTerm() throws ParseException {
int state;
    if (jj_2_9(4)) {
      jj_consume_token(LPAREN);
                          if(debug){System.out.print("(");}
      if (jj_2_1(4)) {
        state = ImpliesTerm();
      } else if (jj_2_2(4)) {
        state = AndTerm();
      } else if (jj_2_3(4)) {
        state = OrTerm();
      } else if (jj_2_4(4)) {
        state = NotTerm();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(RPAREN);
                          if(debug){System.out.print(")");}
    } else if (jj_2_10(4)) {
      if (jj_2_5(4)) {
        state = ImpliesTerm();
      } else if (jj_2_6(4)) {
        state = AndTerm();
      } else if (jj_2_7(4)) {
        state = OrTerm();
      } else if (jj_2_8(4)) {
        state = NotTerm();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
         {if (true) return bdd.ref(state);}
    throw new Error("Missing return statement in function");
  }

  final public int AndTerm() throws ParseException {
int andTerm = bdd.getOne();
int temp = bdd.getOne();
    if (jj_2_11(4)) {
      temp = GroundTerm();
                                     andTerm = bdd.andTo(andTerm, temp);
    } else if (jj_2_12(4)) {
      temp = NotTerm();
                                  andTerm = bdd.andTo(andTerm, temp);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    label_1:
    while (true) {
      jj_consume_token(AND);
                       if(debug){System.out.print("AND ");}
      if (jj_2_19(4)) {
        jj_consume_token(LPAREN);
                                          if(debug){System.out.print("(");}
        if (jj_2_13(4)) {
          temp = GroundTerm();
                                                        andTerm = bdd.andTo(andTerm, temp);
        } else if (jj_2_14(4)) {
          temp = OrTerm();
                                                                 andTerm = bdd.andTo(andTerm, temp);
        } else if (jj_2_15(4)) {
          temp = NotTerm();
                                                                  andTerm = bdd.andTo(andTerm, temp);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
        jj_consume_token(RPAREN);
                                          if(debug){System.out.print(")");}
      } else if (jj_2_20(4)) {
        if (jj_2_16(4)) {
          temp = GroundTerm();
                                                        andTerm = bdd.andTo(andTerm, temp);
        } else if (jj_2_17(4)) {
          temp = OrTerm();
                                                                 andTerm = bdd.andTo(andTerm, temp);
        } else if (jj_2_18(4)) {
          temp = NotTerm();
                                                                  andTerm = bdd.andTo(andTerm, temp);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      if (jj_2_21(4)) {
        ;
      } else {
        break label_1;
      }
    }
         {if (true) return andTerm;}
    throw new Error("Missing return statement in function");
  }

  final public int OrTerm() throws ParseException {
int orTerm = bdd.getZero();
int temp = bdd.getZero();
    if (jj_2_22(4)) {
      temp = GroundTerm();
                                     orTerm = bdd.orTo(orTerm, temp);
    } else if (jj_2_23(4)) {
      temp = NotTerm();
                                  orTerm = bdd.orTo(orTerm, temp);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    label_2:
    while (true) {
      jj_consume_token(OR);
                      if(debug){System.out.print("OR ");}
      if (jj_2_24(4)) {
        temp = GroundTerm();
                                             orTerm = bdd.orTo(orTerm, temp);
      } else if (jj_2_25(4)) {
        temp = NotTerm();
                                          orTerm = bdd.orTo(orTerm, temp);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      if (jj_2_26(4)) {
        ;
      } else {
        break label_2;
      }
    }
         {if (true) return orTerm;}
    throw new Error("Missing return statement in function");
  }

  final public int ImpliesTerm() throws ParseException {
int temp1 = bdd.getZero();
int temp2 = bdd.getZero();
    if (jj_2_34(4)) {
      if (jj_2_27(4)) {
        temp1 = AndTerm();
      } else if (jj_2_28(4)) {
        temp1 = NotTerm();
      } else if (jj_2_29(4)) {
        temp1 = GroundTerm();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else if (jj_2_35(4)) {
      jj_consume_token(LPAREN);
                                  if(debug){System.out.print("(");}
      if (jj_2_30(4)) {
        temp1 = AndTerm();
      } else if (jj_2_31(4)) {
        temp1 = OrTerm();
      } else if (jj_2_32(4)) {
        temp1 = NotTerm();
      } else if (jj_2_33(4)) {
        temp1 = GroundTerm();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(RPAREN);
                                  if(debug){System.out.print(")");}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(IMPLIES);
                   if(debug){System.out.print("-> ");}
    if (jj_2_43(4)) {
      if (jj_2_36(4)) {
        temp2 = AndTerm();
      } else if (jj_2_37(4)) {
        temp2 = NotTerm();
      } else if (jj_2_38(4)) {
        temp2 = GroundTerm();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else if (jj_2_44(4)) {
      jj_consume_token(LPAREN);
                                  if(debug){System.out.print("(");}
      if (jj_2_39(4)) {
        temp2 = AndTerm();
      } else if (jj_2_40(4)) {
        temp2 = OrTerm();
      } else if (jj_2_41(4)) {
        temp2 = NotTerm();
      } else if (jj_2_42(4)) {
        temp2 = GroundTerm();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(RPAREN);
                                  if(debug){System.out.print(")");}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
         {if (true) return bdd.imp(temp1,temp2);}
    throw new Error("Missing return statement in function");
  }

  final public int NotTerm() throws ParseException {
int temp;
    jj_consume_token(NOT);
                if(debug){System.out.print("NOT ");}
    temp = GroundTerm();
         {if (true) return bdd.not(temp);}
    throw new Error("Missing return statement in function");
  }

/**
 *
 */
  final public int GroundTerm() throws ParseException {
        Token predicateName;
    predicateName = jj_consume_token(STRING);
                                if(debug){System.out.print(predicateName.image+" ");}
                if(predicateName.image.equalsIgnoreCase("true")){
                        {if (true) return bdd.getZero();}
                } else if (predicateName.image.equalsIgnoreCase("false")){
                        {if (true) return bdd.getZero();}
                } else {
                        {if (true) return createAtomic(predicateName.image);}
                }
    throw new Error("Missing return statement in function");
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  private boolean jj_2_22(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_22(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  private boolean jj_2_23(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_23(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  private boolean jj_2_24(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_24(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  private boolean jj_2_25(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_25(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  private boolean jj_2_26(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_26(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  private boolean jj_2_27(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_27(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(26, xla); }
  }

  private boolean jj_2_28(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_28(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(27, xla); }
  }

  private boolean jj_2_29(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_29(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(28, xla); }
  }

  private boolean jj_2_30(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_30(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(29, xla); }
  }

  private boolean jj_2_31(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_31(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(30, xla); }
  }

  private boolean jj_2_32(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_32(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(31, xla); }
  }

  private boolean jj_2_33(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_33(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(32, xla); }
  }

  private boolean jj_2_34(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_34(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(33, xla); }
  }

  private boolean jj_2_35(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_35(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(34, xla); }
  }

  private boolean jj_2_36(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_36(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(35, xla); }
  }

  private boolean jj_2_37(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_37(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(36, xla); }
  }

  private boolean jj_2_38(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_38(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(37, xla); }
  }

  private boolean jj_2_39(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_39(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(38, xla); }
  }

  private boolean jj_2_40(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_40(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(39, xla); }
  }

  private boolean jj_2_41(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_41(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(40, xla); }
  }

  private boolean jj_2_42(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_42(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(41, xla); }
  }

  private boolean jj_2_43(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_43(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(42, xla); }
  }

  private boolean jj_2_44(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_44(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(43, xla); }
  }

  private boolean jj_3_40() {
    if (jj_3R_5()) return true;
    return false;
  }

  private boolean jj_3_19() {
    if (jj_scan_token(LPAREN)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_13()) {
    jj_scanpos = xsp;
    if (jj_3_14()) {
    jj_scanpos = xsp;
    if (jj_3_15()) return true;
    }
    }
    if (jj_scan_token(RPAREN)) return true;
    return false;
  }

  private boolean jj_3_38() {
    if (jj_3R_7()) return true;
    return false;
  }

  private boolean jj_3_31() {
    if (jj_3R_5()) return true;
    return false;
  }

  private boolean jj_3_6() {
    if (jj_3R_4()) return true;
    return false;
  }

  private boolean jj_3_21() {
    if (jj_scan_token(AND)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_19()) {
    jj_scanpos = xsp;
    if (jj_3_20()) return true;
    }
    return false;
  }

  private boolean jj_3_29() {
    if (jj_3R_7()) return true;
    return false;
  }

  private boolean jj_3_12() {
    if (jj_3R_6()) return true;
    return false;
  }

  private boolean jj_3_11() {
    if (jj_3R_7()) return true;
    return false;
  }

  private boolean jj_3R_7() {
    if (jj_scan_token(STRING)) return true;
    return false;
  }

  private boolean jj_3_39() {
    if (jj_3R_4()) return true;
    return false;
  }

  private boolean jj_3_37() {
    if (jj_3R_6()) return true;
    return false;
  }

  private boolean jj_3R_4() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_11()) {
    jj_scanpos = xsp;
    if (jj_3_12()) return true;
    }
    if (jj_3_21()) return true;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_21()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  private boolean jj_3_30() {
    if (jj_3R_4()) return true;
    return false;
  }

  private boolean jj_3_4() {
    if (jj_3R_6()) return true;
    return false;
  }

  private boolean jj_3R_6() {
    if (jj_scan_token(NOT)) return true;
    if (jj_3R_7()) return true;
    return false;
  }

  private boolean jj_3_3() {
    if (jj_3R_5()) return true;
    return false;
  }

  private boolean jj_3_5() {
    if (jj_3R_3()) return true;
    return false;
  }

  private boolean jj_3_28() {
    if (jj_3R_6()) return true;
    return false;
  }

  private boolean jj_3_10() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_5()) {
    jj_scanpos = xsp;
    if (jj_3_6()) {
    jj_scanpos = xsp;
    if (jj_3_7()) {
    jj_scanpos = xsp;
    if (jj_3_8()) return true;
    }
    }
    }
    return false;
  }

  private boolean jj_3_2() {
    if (jj_3R_4()) return true;
    return false;
  }

  private boolean jj_3_1() {
    if (jj_3R_3()) return true;
    return false;
  }

  private boolean jj_3_44() {
    if (jj_scan_token(LPAREN)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_39()) {
    jj_scanpos = xsp;
    if (jj_3_40()) {
    jj_scanpos = xsp;
    if (jj_3_41()) {
    jj_scanpos = xsp;
    if (jj_3_42()) return true;
    }
    }
    }
    if (jj_scan_token(RPAREN)) return true;
    return false;
  }

  private boolean jj_3_36() {
    if (jj_3R_4()) return true;
    return false;
  }

  private boolean jj_3_43() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_36()) {
    jj_scanpos = xsp;
    if (jj_3_37()) {
    jj_scanpos = xsp;
    if (jj_3_38()) return true;
    }
    }
    return false;
  }

  private boolean jj_3_9() {
    if (jj_scan_token(LPAREN)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_1()) {
    jj_scanpos = xsp;
    if (jj_3_2()) {
    jj_scanpos = xsp;
    if (jj_3_3()) {
    jj_scanpos = xsp;
    if (jj_3_4()) return true;
    }
    }
    }
    if (jj_scan_token(RPAREN)) return true;
    return false;
  }

  private boolean jj_3_27() {
    if (jj_3R_4()) return true;
    return false;
  }

  private boolean jj_3_35() {
    if (jj_scan_token(LPAREN)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_30()) {
    jj_scanpos = xsp;
    if (jj_3_31()) {
    jj_scanpos = xsp;
    if (jj_3_32()) {
    jj_scanpos = xsp;
    if (jj_3_33()) return true;
    }
    }
    }
    if (jj_scan_token(RPAREN)) return true;
    return false;
  }

  private boolean jj_3_34() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_27()) {
    jj_scanpos = xsp;
    if (jj_3_28()) {
    jj_scanpos = xsp;
    if (jj_3_29()) return true;
    }
    }
    return false;
  }

  private boolean jj_3_42() {
    if (jj_3R_7()) return true;
    return false;
  }

  private boolean jj_3_18() {
    if (jj_3R_6()) return true;
    return false;
  }

  private boolean jj_3_17() {
    if (jj_3R_5()) return true;
    return false;
  }

  private boolean jj_3_25() {
    if (jj_3R_6()) return true;
    return false;
  }

  private boolean jj_3_33() {
    if (jj_3R_7()) return true;
    return false;
  }

  private boolean jj_3_24() {
    if (jj_3R_7()) return true;
    return false;
  }

  private boolean jj_3R_3() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_34()) {
    jj_scanpos = xsp;
    if (jj_3_35()) return true;
    }
    if (jj_scan_token(IMPLIES)) return true;
    xsp = jj_scanpos;
    if (jj_3_43()) {
    jj_scanpos = xsp;
    if (jj_3_44()) return true;
    }
    return false;
  }

  private boolean jj_3_8() {
    if (jj_3R_6()) return true;
    return false;
  }

  private boolean jj_3_15() {
    if (jj_3R_6()) return true;
    return false;
  }

  private boolean jj_3_14() {
    if (jj_3R_5()) return true;
    return false;
  }

  private boolean jj_3_26() {
    if (jj_scan_token(OR)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_24()) {
    jj_scanpos = xsp;
    if (jj_3_25()) return true;
    }
    return false;
  }

  private boolean jj_3_16() {
    if (jj_3R_7()) return true;
    return false;
  }

  private boolean jj_3_23() {
    if (jj_3R_6()) return true;
    return false;
  }

  private boolean jj_3_22() {
    if (jj_3R_7()) return true;
    return false;
  }

  private boolean jj_3_41() {
    if (jj_3R_6()) return true;
    return false;
  }

  private boolean jj_3_32() {
    if (jj_3R_6()) return true;
    return false;
  }

  private boolean jj_3_13() {
    if (jj_3R_7()) return true;
    return false;
  }

  private boolean jj_3_7() {
    if (jj_3R_5()) return true;
    return false;
  }

  private boolean jj_3R_5() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_22()) {
    jj_scanpos = xsp;
    if (jj_3_23()) return true;
    }
    if (jj_3_26()) return true;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_26()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  private boolean jj_3_20() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_16()) {
    jj_scanpos = xsp;
    if (jj_3_17()) {
    jj_scanpos = xsp;
    if (jj_3_18()) return true;
    }
    }
    return false;
  }

  /** Generated Token Manager. */
  public BooleanFormulaParserTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private Token jj_scanpos, jj_lastpos;
  private int jj_la;
  private int jj_gen;
  final private int[] jj_la1 = new int[0];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {};
   }
  final private JJCalls[] jj_2_rtns = new JJCalls[44];
  private boolean jj_rescan = false;
  private int jj_gc = 0;

  /** Constructor with InputStream. */
  public BooleanFormulaParser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public BooleanFormulaParser(java.io.InputStream stream, String encoding) {
